--- a/Client/src/components/PropertyDetails.css
+++ b/Client/src/components/PropertyDetails.css
@@ -60,15 +60,15 @@ a {
 
 .map h3 {
   color: rgb(9, 208, 9);
-  width: 100%;
-  height: 20vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-bottom: 2rem;
 }
 
 .map {
   height: 100%;
+  margin-top: 8rem;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 1090px) {
