--- a/Client/src/components/PropertyList.css
+++ b/Client/src/components/PropertyList.css
@@ -83,7 +83,7 @@
   color: white;
 }
 
-select {
+.tags select {
   padding: 0.7rem;
   border: none;
   border-radius: 0.5rem;
@@ -95,13 +95,13 @@ select {
   margin-bottom: 0.8rem;
 }
 
-select:hover {
+.tags select:hover {
   background-color: #2e2d2d;
   cursor: pointer;
   transition: 0.5s ease-in;
 }
 
-select:focus {
+.tags select:focus {
   outline: none;
   border-color: #4caf50;
   box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
@@ -111,11 +111,11 @@ select:focus {
   background-color: transparent;
 }
 
-@media only screen and (max-width: 768px) {
-  .tags {
+@media only screen and (max-width: 790px) {
+  .grid-container {
     width: 160vw;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 0 !important;
   }
 }
